objects/Opportunity_Role__c.object
<CustomObject>
    <fields>
        <fullName>per_mat_ENSI_comparator__c</fullName>
        <label>% materials as ENSI, comparator</label>
        <precision>11</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>per_mat_sell_comparator__c</fullName>
        <label>% materials as Sell, comparator</label>
        <precision>11</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>per_mat_spot_comparator__c</fullName>
        <label>% materials as Spot, comparator</label>
        <precision>11</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>per_serv_ENSI_comparator__c</fullName>
        <label>% services as ENSI, comparator</label>
        <precision>11</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>per_serv_fac_comparator__c</fullName>
        <label>% services as Facilitator, comparator</label>
        <precision>11</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>per_serv_sell_comparator__c</fullName>
        <label>% services as Sell, comparator</label>
        <precision>11</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>per_serv_spot_comparator__c</fullName>
        <label>% services as Spot, comparator</label>
        <precision>11</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>perc_ENSI_customised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>% ENSI customised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>perc_comm_ad_hoc_day_fac__c</fullName>
        <description>This field was designed for the circumstance of a consultant receiving pay for a days work, but not a split of other services they are not involved in. This situation may not actually occur. However I&apos;m going to leave this in just in case it does.</description>
        <inlineHelpText>If this role will be working on an Ad Hoc basis then enter the % commission they receive for a days work.</inlineHelpText>
        <label>% for Ad Hoc day as Facilitator</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>perc_comm_mat_ENSI__c</fullName>
        <defaultValue>IF($RecordType.Id=&quot;0120E000000J29eQAC&quot;,0.8,0)</defaultValue>
        <label>% materials as ENSI</label>
        <precision>11</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>perc_comm_mat_sell__c</fullName>
        <label>% materials as Sell</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>perc_comm_mat_spot__c</fullName>
        <label>% materials as Spot</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>perc_comm_ref__c</fullName>
        <label>% as referrer</label>
        <precision>11</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>perc_comm_serv_ENSI__c</fullName>
        <label>% services as ENSI</label>
        <precision>11</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>perc_comm_serv_fac__c</fullName>
        <label>% services as Facilitator</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>perc_comm_serv_sell__c</fullName>
        <label>% services as Sell</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>perc_comm_serv_spot__c</fullName>
        <label>% services as Spot</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>perc_facilitator_customised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>% facilitator customised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>perc_marketing_customised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>% marketing customised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>perc_total_comm_mat_as_sell__c</fullName>
        <formula>perc_comm_mat_sell__c / Opportunity__r.Total_commission_materials_marketing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>% of total materials as Sell / total marketing for materials</inlineHelpText>
        <label>% of total materials as Sell</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>perc_total_comm_mat_as_spot__c</fullName>
        <formula>perc_comm_mat_spot__c / Opportunity__r.Total_commission_materials_marketing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>% of total materials as Spot / total marketing for materials</inlineHelpText>
        <label>% of total materials as Spot</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>perc_total_comm_serv_as_sell__c</fullName>
        <formula>perc_comm_serv_sell__c / Opportunity__r.Total_perc_commission_marketing_services__c</formula>
        <inlineHelpText>% services as Sell / total marketing</inlineHelpText>
        <label>% of total services as Sell</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>perc_total_comm_serv_as_spot__c</fullName>
        <formula>perc_comm_serv_spot__c / Opportunity__r.Total_perc_commission_marketing_services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>% of total services as Spot / total marketing</inlineHelpText>
        <label>% of total services as Spot</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>total_doll_assoc_rev_mark_AUD__c</fullName>
        <formula>total_doll_assoc_rev_mark__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ assoc. revenue for mark. AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>total_doll_assoc_rev_mark__c</fullName>
        <label>Total $ assoc. revenue for mark.</label>
        <summarizedField>Opportunity_Role_Record__c.doll_assoc_rev_mark_ruv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.Role__c</field>
            <operation>equals</operation>
            <value>Sell, Spot</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Opportunity Role</label>
    <nameField>
        <label>Opportunity Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Roles</pluralLabel>
    <recordTypes>
        <fullName>ENSi</fullName>
        <active>true</active>
        <description>Used for ENSi only. This role will always be created for you automatically so you won&apos;t need to use this record type.</description>
        <label>ENSi</label>
    </recordTypes>
    <recordTypes>
        <fullName>Person</fullName>
        <active>true</active>
        <description>This could be a Facilitator, Marketer, Network Member or ENSi staff.</description>
        <label>Person</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referrer</fullName>
        <active>true</active>
        <description>Used for referrers only e.g. Takeda, CAANZ. If you don&apos;t have a referrer for this Opportunity you won&apos;t need to use this record type.</description>
        <label>Referrer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Role_on_OC_PAX</fullName>
        <active>true</active>
        <description>DO NOT USE this record type. This record type is used in the creation of commissions and Invoices Payable for our Network Members.</description>
        <label>Role on OC PAX</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_position</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
OR(perc_comm_mat_sell__c&gt;0,perc_comm_serv_sell__c&gt;0),
ISNULL(TEXT(Sell_position__c))
),
AND(
OR(perc_comm_mat_spot__c&gt;0,perc_comm_serv_spot__c&gt;0),
ISNULL(TEXT(Spot_position__c))
),
AND(
perc_comm_serv_fac__c&gt;0,
ISNULL(TEXT(Facilitator_position__c))
)
)</errorConditionFormula>
        <errorMessage>Please make sure you define a Facilitator, Sell, or Spot position if you have entered a split % for them.</errorMessage>
    </validationRules>
</CustomObject>